Fix errors html files after html validator

--- a/templates/about.html
+++ b/templates/about.html
@@ -86,7 +86,7 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
         <div class="card shadow-sm border-0 rounded" >
           <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890673/James-599x500_xiwsb5.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-            <div class="p-4" id="card-team-body">
+            <div class="p-4" id="card-team-body-1">
               <h5 class="mb-0">JAMES MILNER</h5>
                 <p class="small text-muted">PARTNER</p>
                   <ul class="social mb-0 list-inline mt-3">
@@ -102,7 +102,7 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
           <div class="card shadow-sm border-0 rounded">
             <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890718/Jodan1-599x500_vnysqz.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-              <div class="p-4" id="card-team-body">
+              <div class="p-4" id="card-team-body-2">
                 <h5 class="mb-0">JODAN BROWN</h5>
                   <p class="small text-muted">PARTNER</p>
                     <ul class="social mb-0 list-inline mt-3">
@@ -118,7 +118,7 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
           <div class="card shadow-sm border-0 rounded">
             <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890799/Emma2-599x500_cgbd9g.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-              <div class="p-4" id="card-team-body">
+              <div class="p-4" id="card-team-body-3">
                 <h5 class="mb-0">MELANIE BUNTON</h5>
                   <p class="small text-muted">PARTNER</p>
                     <ul class="social mb-0 list-inline mt-3">
@@ -134,7 +134,7 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
           <div class="card shadow-sm border-0 rounded">
             <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890752/joel1-599x500_njza6t.jpg" alt="worker-4" class="w-100 card-img-top">
-              <div class="p-4" id="card-team-body">
+              <div class="p-4" id="card-team-body-4">
                 <h5 class="mb-0">JOHN HENDERSON</h5>
                   <p class="small text-muted">PARTNER</p>
                     <ul class="social mb-0 list-inline mt-3">
