--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <h3 class="text-white p-3">WELCOME TO</h3>
               <h1 class="text-white p-2"><strong>DE JURE LAW FIRM</strong> </h1>
                 <h5 class="text-white p-3">We are a leading law firm<br> With more than 20 years of experience</h5>
-                  <a class="btn btn-outline-light btn-lg add-post-button" id="book-btn" href="{% url 'booknow' %}" role="button">Book Now</a>
+                  <a class="btn btn-outline-light btn-lg add-post-button" id="book-btn-main" href="{% url 'booknow' %}" role="button">Book Now</a>
           </div>      
         </div>
       </div>
@@ -89,7 +89,7 @@
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
       <div class="card shadow-sm border-0 rounded" >
         <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890673/James-599x500_xiwsb5.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-          <div class="p-4" id="card-team-body">
+          <div class="p-4" id="card-team-body-1">
             <h5 class="mb-0">JAMES MILNER</h5>
               <p class="small text-muted">PARTNER</p>
                 <ul class="social mb-0 list-inline mt-3">
@@ -105,7 +105,7 @@
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
         <div class="card shadow-sm border-0 rounded">
           <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890718/Jodan1-599x500_vnysqz.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-            <div class="p-4" id="card-team-body">
+            <div class="p-4" id="card-team-body-2">
               <h5 class="mb-0">JODAN BROWN</h5>
                 <p class="small text-muted">PARTNER</p>
                   <ul class="social mb-0 list-inline mt-3">
@@ -121,7 +121,7 @@
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
         <div class="card shadow-sm border-0 rounded">
           <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890799/Emma2-599x500_cgbd9g.jpg" alt="worker-de-jure" class="w-100 card-img-top">
-            <div class="p-4" id="card-team-body">
+            <div class="p-4" id="card-team-body-3">
               <h5 class="mb-0">MELANIE BUNTON</h5>
                 <p class="small text-muted">PARTNER</p>
                   <ul class="social mb-0 list-inline mt-3">
@@ -137,7 +137,7 @@
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
         <div class="card shadow-sm border-0 rounded">
           <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890752/joel1-599x500_njza6t.jpg" alt="worker-4" class="w-100 card-img-top">
-            <div class="p-4" id="card-team-body">
+            <div class="p-4" id="card-team-body-4">
               <h5 class="mb-0">JOHN HENDERSON</h5>
                 <p class="small text-muted">PARTNER</p>
                   <ul class="social mb-0 list-inline mt-3">
