--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <header>
       <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="logo"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1679316052/logo-removebg-preview_1_znr8rk.png" style="width: 70px; height: 50px;"> </a>
+          <a class="logo"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1679316052/logo-removebg-preview_1_znr8rk.png" style="width: 70px; height: 50px;" alt="logo"> </a>
           <a class="navbar-brand" href="{% url 'home' %}">De Jure</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,10 +33,10 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mr-5">
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'home' %}" >Home</a></li>
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'about' %}" >About us</a></li>
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'blog' %}" >Blog</a></li>
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'contact' %}" >Contact</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-home" href="{% url 'home' %}" >Home</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-about" href="{% url 'about' %}" >About us</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-blog" href="{% url 'blog' %}" >Blog</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-contact" href="{% url 'contact' %}" >Contact</a></li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
