--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -14,9 +14,9 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="" width="100%">
+                <img src="" width="100%" alt="post-img">
                 {% else %}
-                <img src=" {{ post.featured_image.url }}" width="100%" style="margin-top: -40px;">
+                <img src=" {{ post.featured_image.url }}" alt="post-img" width="100%" style="margin-top: -40px;">
                 {% endif %}
             </div>
         </div>
