Add changes for about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -55,25 +55,23 @@
   
   <!-- About Section -->
   <section id="about" class="about">
-    <div class="container" data-aos="fade-up">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
-          <div class="about-img">
-            <img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678975992/pexels-august-de-richelieu-4427431_jj6erl.jpg" alt="team-de-jure">
-          </div>
+        <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
+          <img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678975992/pexels-august-de-richelieu-4427431_jj6erl.jpg" class="img-fluid" alt="">
         </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h5>At our law firm, we are dedicated to providing our clients with the highest level of legal representation and guidance. Our team of experienced attorneys and staff are committed to helping our clients navigate even the most complex legal issues with ease.
-            </h5><br>
-            <h5> Our attorneys have a wealth of experience in a wide range of practice areas, including but not limited to personal injury, family law, criminal defense, and business law.
-            </h5><br>
-            <h5>We believe that open communication, trust, and mutual respect are essential components of a successful attorney-client relationship, and we strive to cultivate these values in every interaction.
-            </h5>
-          </div>
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <h5>At our law firm, we are dedicated to providing our clients with the highest level of legal representation and guidance. Our team of experienced attorneys and staff are committed to helping our clients navigate even the most complex legal issues with ease.
+          </h5><br>
+          <h5> Our attorneys have a wealth of experience in a wide range of practice areas, including but not limited to personal injury, family law, criminal defense, and business law.
+          </h5><br>
+          <h5>We believe that open communication, trust, and mutual respect are essential components of a successful attorney-client relationship, and we strive to cultivate these values in every interaction.
+          </h5>
+        </div>
       </div>
     </div>
   </section>
-  
+
   <!-- Team Section-->
   <section id="team" class="team" >
     <div class="container" data-aos="fade-up">
@@ -119,7 +117,7 @@
           <div class="card shadow-sm border-0 rounded">
             <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890799/Emma2-599x500_cgbd9g.jpg" alt="worker-de-jure" class="w-100 card-img-top">
               <div class="p-4" id="card-team-body-3">
-                <h5 class="mb-0">MELANIE BUNTON</h5>
+                <h5 class="mb-0">KATE BUNTON</h5>
                   <p class="small text-muted">PARTNER</p>
                     <ul class="social mb-0 list-inline mt-3">
                       <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
@@ -135,7 +133,7 @@
           <div class="card shadow-sm border-0 rounded">
             <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890752/joel1-599x500_njza6t.jpg" alt="worker-4" class="w-100 card-img-top">
               <div class="p-4" id="card-team-body-4">
-                <h5 class="mb-0">JOHN HENDERSON</h5>
+                <h5 class="mb-0">JOHN JERSON</h5>
                   <p class="small text-muted">PARTNER</p>
                     <ul class="social mb-0 list-inline mt-3">
                       <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
