--- a/templates/message-received.html
+++ b/templates/message-received.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="container-fluid confirmation-contaner">
+<div class="container-fluid confirmation-contaner" style="min-height: 50vh;">
     <div class="row">
         <div class="col-md-4 offset-md-4 mt-5">
             <div class="card rounded m-2 shadow-sm border-0">
