add meta to the base file

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="De Jure law firm book a consultation">
+      <meta name="keywords"
+      content="de jure, law, lawyers, law firm, consultation, legal help, legal blog">
     <!-- Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
